# ntcl-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.f90  pyproject.toml
c/ntcl-util/string/: CMakeLists.txt  short_string_ccompat.c
cmake/: NTCLAlgorithmsTargets.cmake  NTCLBuildTargets.cmake  NTCLDataTargets.cmake  NTCLTensorTargets.cmake  NTCLUtilTargets.cmake
ntcl-c/: CMakeLists.txt
ntcl-c/ntcl-util/: CMakeLists.txt
ntcl-c/ntcl-util/dictionary/: CMakeLists.txt  dictionary_ccompat.h
ntcl-c/ntcl-util/string/: CMakeLists.txt  short_string_ccompat.c  short_string_ccompat.h
tests/: CMakeLists.txt
tests/helpers/ntcl-util/: CMakeLists.txt  print_dictionary.f90  print_dictionary_ccompat.f90  print_dictionary_ccompat.h  print_short_string.f90  print_short_string.h  print_string.f90
tests/ntcl-util/dictionary/: CMakeLists.txt  dictionary_hello_world_test_cpp.cc  dictionary_hello_world_test_fort.f90
tests/ntcl-util/string/: CMakeLists.txt  hello_world_test_c.c  hello_world_test_cpp.cc  hello_world_test_fort.f90
