[tool.poetry]
name = "ntcl-cpp"
version = "0.1.0"
description = "A C/C++ interface for the NTCL."
authors = ["Matthias Heinz <heinz.matthias.3@gmail.com>"]
license = "BSD-3-Clause License"

[tool.poetry.dependencies]
python = "^3.7"
GitPython = "^3.1.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
